統一共用畫面尺寸並新增商品定義
